1: Добавить возможность отключать определённые проверки URL: http://github.com/mekras/botobor/issues/issue/1

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,13 @@
 # $Id$
 #
 
+##[ Build ]#############################################
+build.dir=./build
+logs.dir=./logs
+
+##[ PHPUnit ]#############################################
+phpunit.coverage.html=./code-coverage
+
 ##[ API Docs ]#############################################
 docs.dir=./docs
 docs.converter=HTML:frames:default
