--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- $Id$
- -->
 
-<project name="libbotobor" default="checkstyle" basedir="./">
+<project name="botobor" default="tests" basedir="./">
 
 	<property file="build.properties" />
+
+	<!-- ====================================================================================== -->
+
+	<target name="tests" description="Unit tests">
+
+		<phplint>
+			<fileset dir="src">
+				<include name="**" />
+			</fileset>
+		</phplint>
+
+		<mkdir dir="${logs.dir}" />
+		<exec
+			command="phpunit
+				--configuration ${project.basedir}/tests/phpunit/phpunit.xml
+				--log-junit ${logs.dir}/phpunit.xml
+				--coverage-clover ${logs.dir}/phpunit.coverage.xml
+				--coverage-html ${phpunit.coverage.html}"
+			checkreturn="true"
+			logoutput="true"
+		/>
+
+	</target>
 
 	<!-- ====================================================================================== -->
 
@@ -24,7 +44,6 @@
 			/>
 			<fileset dir="src">
 				<include name="**" />
-				<exclude name=".svn" />
 			</fileset>
 		</phpcodesniffer>
 
@@ -37,7 +56,7 @@
 		<delete dir="${docs.dir}" includeemptydirs="true" failonerror="true" />
 
 		<phpdoc
-			title="libBotobor API"
+			title="Botobor API"
 		  destdir="${docs.dir}"
 		  sourcecode="no"
 			parseprivate="no"
