Сборка документации сделана при помощи PhpDocumentor2

--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,14 @@
-#
-# $Id$
-#
-
 ##[ Build ]#############################################
 build.dir=./build
 logs.dir=./logs
+
+##[ PHP_CodeSniffer ]#############################################
+phpcs.standard=PSR2-DS
+phpcs.format=checkstyle
+phpcs.output=${logs.dir}/checkstyle.xml
 
 ##[ PHPUnit ]#############################################
 phpunit.coverage.html=./code-coverage
 
 ##[ API Docs ]#############################################
 docs.dir=./docs
-docs.converter=HTML:frames:default
