--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,24 @@
 {
     "name" : "mekras/botobor",
-    "type" : "library",
     "description" : "PHP antispam library",
+    "type": "library",
     "license" : "Apache-2.0",
-    "require" :
-    {
-        "php": ">=5.0.0"
+    "keywords": ["antispam", "forms", "spam"],
+    "authors": [
+        {
+            "name": "Михаил Красильников",
+            "email": "m.krasilnikov@yandex.ru"
+        }
+    ],
+    "require": {
+        "php": ">=5.6"
     },
     "autoload":
     {
         "classmap": ["src/botobor.php"]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0",
+        "satooshi/php-coveralls": "^1.0"
     }
 }
